--- a/css/mobile.css
+++ b/css/mobile.css
@@ -78,7 +78,9 @@ body {
     font-weight: 700;
     text-transform: uppercase;
 }
-
+.condition{
+    padding-top: 10px;
+}
 .condition .filter-sort_title{
     display: block ;
     color: #4a4a4a;
