--- a/css/base.css
+++ b/css/base.css
@@ -35,6 +35,8 @@ article {
     margin: 0 auto;  
     position: relative;
     /* position: relative; */
+    background: transparent;
+    
     
  
 
@@ -48,6 +50,10 @@ iframe{
     display: flex;
     justify-content: center;
     overflow: hidden;
+  
+   
+      
+      
 
    
 
